# slidebox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAYOUTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: auth.md  authoring-decks.md  components.md  index.md  layout.md  quickstart.md  themes.md  updating.md
examples/: calibrate_fit.py  constat_slide.py  custom_component.py  custom_theme.py  hello_world.py  kpi_dashboard.py  kpi_report.py  random_deck.py  weekly_refresh.py
src/slidebox/: __init__.py  __main__.py  builder.py  context.py  drive.py  errors.py  fit.py  geometry.py  grid.py  measure.py  presentation.py  render.py  schema.py  theme.py  types.py  units.py
src/slidebox/client/: __init__.py  auth.py  batching.py  drive_client.py  retry.py  slides_client.py
src/slidebox/compile/: __init__.py  compiler.py  ids.py  metadata.py  requests.py
src/slidebox/components/: __init__.py  base.py  image.py  kpi.py  kpi_grid.py  layout.py  shape.py  slide.py  text.py
src/slidebox/layout/: __init__.py  constraints.py  engine.py  flex.py
src/slidebox/update/: __init__.py  differ.py  queries.py  updater.py
tests/: conftest.py  test_builder.py  test_drive.py  test_fit.py  test_grid.py  test_measure.py  test_render.py  test_schema.py  test_smoke.py
tests/integration/: conftest.py  test_batching.py  test_create_flow.py  test_drive_upload.py  test_update_flow.py
tests/unit/: test_compiler.py  test_context.py  test_ids.py  test_kpi_grid.py  test_layout_engine.py  test_layout_flex.py  test_metadata.py  test_smoke.py  test_theme.py  test_units.py  test_updater.py
